--- a/index.html
+++ b/index.html
@@ -25,14 +25,35 @@
             <a href="#home">Home</a>
             <a href="#about">Tentang Kami</a>
             <a href="#menu">Menu</a>
+            <a href="#products">Products</a>
             <a href="#contact">Kontak</a>
         </div>
 
         <div class="navbar-extra">
-            <a href="#" id="search"><i data-feather="search"></i></a>
-            <a href="#" id="shopping-cart"><i data-feather="shopping-cart"></i></a>
+            <a href="#" id="search-button"><i data-feather="search"></i></a>
+            <a href="#" id="shopping-cart-button"><i data-feather="shopping-cart"></i></a>
             <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
         </div>
+
+        <!-- Search form -->
+         <div class="search-form">
+            <input type="search" id="search-box" placeholder="search here...">
+            <label for="search-box"><i data-feather="search"></i></label>
+         </div>
+        <!-- Search form end -->
+         <div class="shopping-cart">
+            <div class="cart-item">
+                <img src="Media/coffee beans.jpg" alt="product 1">
+                <div class="item-detail">
+                    <h3>Product 1</h3>
+                    <div class="item-price">IDR 30K</div>
+                </div>
+                <i data-feather="trash-2" class="remove-item"></i>
+            </div>
+         </div>
+         <!-- Shopping Cart -->
+
+         <!-- Shopping Cart end -->
      </nav>
     <!-- navbar end -->
      <!-- Hero -->
@@ -102,6 +123,76 @@
         </section>
        <!-- Menu End-->
 
+       <!-- Product -->
+        <section class="products" id="products">
+            <h2><span>Produk Unggulan</span> Kami</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit laudantium modi quas, asperiores quo voluptates!</p>
+
+            <div class="row">
+                <div class="product-card">
+                    <div class="product-icons">
+                        <a href="#"><i data-feather="shopping-cart"></i></a>
+                        <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
+                    </div>
+                    <div class="product-image">
+                        <img src="Media/coffee beans.jpg" alt="product-image">
+                    </div>
+                    <div class="product-content">
+                        <h3>Coffe Beans 1</h3>
+                        <div class="product-stars">
+                            <i data-feather="star"></i>
+                            <i data-feather="star"></i>
+                            <i data-feather="star"></i>
+                            <i data-feather="star"></i>
+                            <i data-feather="star"></i>
+                        </div>
+                        <div class="product-price">IDR 30K <span>IDR 55K</span></div>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="product-icons">
+                        <a href="#"><i data-feather="shopping-cart"></i></a>
+                        <a href="#"><i data-feather="eye"></i></a>
+                    </div>
+                    <div class="product-image">
+                        <img src="Media/coffee beans.jpg" alt="product-image">
+                    </div>
+                    <div class="product-content">
+                        <h3>Coffe Beans 1</h3>
+                        <div class="product-stars">
+                            <i data-feather="star"></i>
+                            <i data-feather="star"></i>
+                            <i data-feather="star"></i>
+                            <i data-feather="star"></i>
+                            <i data-feather="star"></i>
+                        </div>
+                        <div class="product-price">IDR 30K <span>IDR 55K</span></div>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="product-icons">
+                        <a href="#"><i data-feather="shopping-cart"></i></a>
+                        <a href="#"><i data-feather="eye"></i></a>
+                    </div>
+                    <div class="product-image">
+                        <img src="Media/coffee beans.jpg" alt="product-image">
+                    </div>
+                    <div class="product-content">
+                        <h3>Coffe Beans 1</h3>
+                        <div class="product-stars">
+                            <i data-feather="star"></i>
+                            <i data-feather="star"></i>
+                            <i data-feather="star"></i>
+                            <i data-feather="star"></i>
+                            <i data-feather="star"></i>
+                        </div>
+                        <div class="product-price">IDR 30K <span>IDR 55K</span></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+       <!-- Product end -->
+
        <!-- Contact -->
         <section id="contact" class="contact">
             <h2><span>Kontak</span> Kami</h2>
@@ -151,6 +242,31 @@
             </div>
         </footer>
         <!-- Footer End -->
+
+        <!-- Modal Box Item -->
+         <div class="modal" id="item-detail-modal">
+            <div class="modal-container">
+                <a href="#" class="close-icon"><i data-feather="x"></i></a>
+                <div class="modal-content">
+                    <img src="Media/coffee beans.jpg" alt="product 1">
+                    <div class="product-content">
+                        <h3>Product 1</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id quod tempora dolore veritatis cum, minima aliquid enim libero? Voluptate debitis labore pariatur, autem deserunt nesciunt!</p>
+
+                        <div class="product-stars">
+                            <i data-feather="star"></i>
+                            <i data-feather="star"></i>
+                            <i data-feather="star"></i>
+                            <i data-feather="star"></i>
+                            <i data-feather="star"></i>
+                        </div>
+                        <div class="product-price">IDR 30K <span>IDR 55K</span></div>
+                        <a href="#"><i data-feather="shopping-cart"></i><span>add to cart</span></a>
+                    </div>
+                </div>
+            </div>
+         </div>
+        <!-- Modal Box Item end -->
     
     <!-- Feather icons -->
     <script>feather.replace();</script>
