add css masking style

--- a/index.html
+++ b/index.html
@@ -58,11 +58,12 @@
     <!-- navbar end -->
      <!-- Hero -->
       <section class="hero" id="home">
-        <main class="content">
+        <div class="mask-container">
+            <main class="content">
             <h1>Mari Nikmati Secangkir <span>Kopi</span></h1>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta, nostrum?</p>
-            <a href="#" class="cta">Beli Sekarang</a>
         </main>
+        </div>
       </section>
       <!-- Hero End -->
 
@@ -152,13 +153,13 @@
                 <div class="product-card">
                     <div class="product-icons">
                         <a href="#"><i data-feather="shopping-cart"></i></a>
-                        <a href="#"><i data-feather="eye"></i></a>
+                        <a href="#"><i data-feather="eye" class="item-detail-button"></i></a>
                     </div>
                     <div class="product-image">
                         <img src="Media/coffee beans.jpg" alt="product-image">
                     </div>
                     <div class="product-content">
-                        <h3>Coffe Beans 1</h3>
+                        <h3>Coffe Beans 2</h3>
                         <div class="product-stars">
                             <i data-feather="star"></i>
                             <i data-feather="star"></i>
@@ -172,13 +173,13 @@
                 <div class="product-card">
                     <div class="product-icons">
                         <a href="#"><i data-feather="shopping-cart"></i></a>
-                        <a href="#"><i data-feather="eye"></i></a>
+                        <a href="#"><i data-feather="eye" class="item-detail-button"></i></a>
                     </div>
                     <div class="product-image">
                         <img src="Media/coffee beans.jpg" alt="product-image">
                     </div>
                     <div class="product-content">
-                        <h3>Coffe Beans 1</h3>
+                        <h3>Coffe Beans 3</h3>
                         <div class="product-stars">
                             <i data-feather="star"></i>
                             <i data-feather="star"></i>
