--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 
     <!-- My style -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- AlpineJS -->
+     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+
+     <!-- App -->
+      <script src="src/app.js"></script>
 </head>
 <body>
     <!-- navbar -->
@@ -41,7 +47,9 @@
             <label for="search-box"><i data-feather="search"></i></label>
          </div>
         <!-- Search form end -->
-         <div class="shopping-cart">
+        
+         <!-- Shopping Cart -->
+          <div class="shopping-cart">
             <div class="cart-item">
                 <img src="Media/coffee beans.jpg" alt="product 1">
                 <div class="item-detail">
@@ -51,8 +59,6 @@
                 <i data-feather="trash-2" class="remove-item"></i>
             </div>
          </div>
-         <!-- Shopping Cart -->
-
          <!-- Shopping Cart end -->
      </nav>
     <!-- navbar end -->
@@ -125,71 +131,52 @@
        <!-- Menu End-->
 
        <!-- Product -->
-        <section class="products" id="products">
+        <section class="products" id="products" x-data="products">
             <h2><span>Produk Unggulan</span> Kami</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit laudantium modi quas, asperiores quo voluptates!</p>
 
             <div class="row">
-                <div class="product-card">
-                    <div class="product-icons">
-                        <a href="#"><i data-feather="shopping-cart"></i></a>
-                        <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
-                    </div>
-                    <div class="product-image">
-                        <img src="Media/coffee beans.jpg" alt="product-image">
-                    </div>
-                    <div class="product-content">
-                        <h3>Coffe Beans 1</h3>
-                        <div class="product-stars">
-                            <i data-feather="star"></i>
-                            <i data-feather="star"></i>
-                            <i data-feather="star"></i>
-                            <i data-feather="star"></i>
-                            <i data-feather="star"></i>
+                <template x-for="(item, index) in items" x-key="index"> 
+                    <div class="product-card">
+                        <div class="product-icons">
+                            <a href="#">
+                                <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <use href="Media/feather-sprite.svg#shopping-cart" />
+                                </svg>
+                            </a>
+                            <a href="#" class="item-detail-button">
+                                <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <use href="Media/feather-sprite.svg#eye" />
+                                </svg>
+                            </a>
                         </div>
-                        <div class="product-price">IDR 30K <span>IDR 55K</span></div>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="product-icons">
-                        <a href="#"><i data-feather="shopping-cart"></i></a>
-                        <a href="#"><i data-feather="eye" class="item-detail-button"></i></a>
-                    </div>
-                    <div class="product-image">
-                        <img src="Media/coffee beans.jpg" alt="product-image">
-                    </div>
-                    <div class="product-content">
-                        <h3>Coffe Beans 2</h3>
-                        <div class="product-stars">
-                            <i data-feather="star"></i>
-                            <i data-feather="star"></i>
-                            <i data-feather="star"></i>
-                            <i data-feather="star"></i>
-                            <i data-feather="star"></i>
+                        <div class="product-image">
+                            <img :src="`Media/${item.img}`" :alt="item.name">
                         </div>
-                        <div class="product-price">IDR 30K <span>IDR 55K</span></div>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="product-icons">
-                        <a href="#"><i data-feather="shopping-cart"></i></a>
-                        <a href="#"><i data-feather="eye" class="item-detail-button"></i></a>
-                    </div>
-                    <div class="product-image">
-                        <img src="Media/coffee beans.jpg" alt="product-image">
-                    </div>
-                    <div class="product-content">
-                        <h3>Coffe Beans 3</h3>
-                        <div class="product-stars">
-                            <i data-feather="star"></i>
-                            <i data-feather="star"></i>
-                            <i data-feather="star"></i>
-                            <i data-feather="star"></i>
-                            <i data-feather="star"></i>
+                        <div class="product-content">
+                            <h3 x-text="item.name"></h3>
+                            <div class="product-stars">
+                                <svg width="24" height="24" fill="currentColor" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <use href="Media/feather-sprite.svg#star" />
+                                </svg>
+                                <svg width="24" height="24" fill="currentColor" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <use href="Media/feather-sprite.svg#star" />
+                                </svg>
+                                <svg width="24" height="24" fill="currentColor" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <use href="Media/feather-sprite.svg#star" />
+                                </svg>
+                                <svg width="24" height="24" fill="currentColor" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <use href="Media/feather-sprite.svg#star" />
+                                </svg>
+                                <svg width="24" height="24" fill="currentColor" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <use href="Media/feather-sprite.svg#star" />
+                                </svg>
+                                
+                            </div>
+                            <div class="product-price"><span x-text="rupiah(item.price)"></span></div>
                         </div>
-                        <div class="product-price">IDR 30K <span>IDR 55K</span></div>
                     </div>
-                </div>
+                </template>
             </div>
         </section>
        <!-- Product end -->
