--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <!-- navbar -->
-     <nav class="navbar">
+     <nav class="navbar" x-data>
         <a href="#" class="navbar-logo">Kenangan<span>Senja</span></a>
 
         <div class="navbar-nav">
@@ -37,7 +37,10 @@
 
         <div class="navbar-extra">
             <a href="#" id="search-button"><i data-feather="search"></i></a>
-            <a href="#" id="shopping-cart-button"><i data-feather="shopping-cart"></i></a>
+            <a href="#" id="shopping-cart-button">
+                <i data-feather="shopping-cart"></i>
+                <span class="quantity-badge" x-text="$store.cart.quantity" x-show="$store.cart.quantity">10</span>
+            </a>
             <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
         </div>
 
@@ -50,14 +53,22 @@
         
          <!-- Shopping Cart -->
           <div class="shopping-cart">
-            <div class="cart-item">
-                <img src="Media/coffee beans.jpg" alt="product 1">
+            <template x-for="(item, index) in $store.cart.items" x-key="index">
+                <div class="cart-item">
+                <img :src="`Media/${item.img}`" :alt="item.name">
                 <div class="item-detail">
-                    <h3>Product 1</h3>
-                    <div class="item-price">IDR 30K</div>
+                    <h3 x-text="item.name">Product 1</h3>
+                    <div class="item-price">
+                        <span x-text="rupiah(item.price)">Rp. 30.000</span> &times;
+                        <button id="remove" @click="$store.cart.remove(item.id)">&minus;</button>
+                        <span x-text="item.quantity">1</span>
+                        <button id="add" @click="$store.cart.add(item)">&plus;</button> &equals;
+                        <span x-text="rupiah(item.total)">Rp. 30.000</span>
+                    </div>
                 </div>
-                <i data-feather="trash-2" class="remove-item"></i>
+                <!-- <i data-feather="trash-2" class="remove-item"></i> -->
             </div>
+            </template>
          </div>
          <!-- Shopping Cart end -->
      </nav>
@@ -139,7 +150,7 @@
                 <template x-for="(item, index) in items" x-key="index"> 
                     <div class="product-card">
                         <div class="product-icons">
-                            <a href="#">
+                            <a href="#" @click.prevent="$store.cart.add(item)">
                                 <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <use href="Media/feather-sprite.svg#shopping-cart" />
                                 </svg>
